# ratz

./: Cargo.toml  LICENSE  LICENSE-MIT  Makefile  README.md  flake.nix  main.rs  rustfmt.toml  shell.nix
.github/workflow/: check.yml
.github/workflows/: check.yml
nix/: rust.nix  sources.json
src/: applicative.rs  associative.rs  associative_both.rs  associative_either.rs  associative_flatten.rs  bifunctor.rs  commutative.rs  contravariant.rs  core.rs  covariant.rs  data-old.rs  data.rs  family.rs  foldable.rs  foo.rs  functor.rs  hkt.rs  hkt2.rs  idempotent.rs  identity.rs  identity_both.rs  identity_either.rs  identity_flatten.rs  inverse.rs  lib.rs  monad.rs  monoid.rs  profunctor.rs  right_covariant.rs  semigroup.rs  traversable-old.rs  traversable.rs
src/data/: either.rs  mod.rs  option.rs  vec.rs
src/derived/: applicative.rs  mod.rs  monad.rs
