[package]
name = "ratz"
version = "0.0.1"
authors = ["Maxim Schuwalow <maxim.schuwalow@gmail.com>"]
description = "Performant, convenient and idiomatic FP for Rust."
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
