[package]
name = "ratz"
version = "0.0.1"
authors = ["Maxim Schuwalow <maxim.schuwalow@gmail.com>", "Narek Asadorian <narek.asadorian@gmail.com>"]
description = "Performant, convenient, and idiomatic FP for Rust."
license = "asl20"
edition = "2021"

[package.metadata.nix]
build = true
systems = [
  "aarch64-linux",
  "aarch64-darwin",
  "i686-linux",
  "x86_64-darwin",
  "x86_64-linux",
]

